--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Deploy to server
       run: |
-        scp -r ./build ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_NAME }}:/kb/ending-project
+        scp -r ./dist ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_NAME }}:/kb/ending-project
         sshpass -p ${{ secrets.SERVER_PASSWORD }} ssh -o StrictHostKeyChecking=no root@${{ secrets.SERVER_NAME }} "docker restart ending-project"
       env:
         SSH_AUTH_SOCK: /dev/null # 禁用 SSH Agent
