--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Deploy to server
+    - name: Deploy to Server
       run: |
-        scp -r ./build ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_NAME }}:/kb/ending-project
-        sshpass -p ${{ secrets.SERVER_PASSWORD }} ssh -o StrictHostKeyChecking=no root@${{ secrets.SERVER_NAME }} "docker restart ending-project"
-      env:
-        SSH_AUTH_SOCK: /dev/null # 禁用 SSH Agent
+        ssh-keyscan -H 121.41.170.32 >> ~/.ssh/known_hosts
+        echo "${{ secrets.SECRETE_KEY }}" > /tmp/private_key.pem
+        chmod 600 /tmp/private_key.pem
+        scp -i /tmp/private_key.pem -r ./dist/* ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_NAME }}:/kb/ending-project
+        ssh -i /tmp/private_key.pem ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_NAME }} "docker restart ending-project"
