--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --quiet --fix"
