--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
         git add ./dist
         git commit -m "build: auto build"
         git push origin main
+      env:
+        HTTP_PROXY: ${{ secrets.HTTP_PROXY }}
+        HTTPS_PROXY: ${{ secrets.HTTP_PROXY }}
   deploy:
     needs: build
     runs-on: ubuntu-latest
