--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,16 @@ jobs:
       run: yarn test
     - name: Build
       run: yarn build
+    - name: Push to Branch
+      run: |
+        git config --global user.email "1845519693@qq.com"
+        git config --global user.name "ci"
+        git config pull.rebase false
+        git checkout -b main  # 创建或切换到目标分支
+        git pull origin main
+        git add ./dist
+        git commit -m "build: auto build"
+        git push origin main
   deploy:
     needs: build
     runs-on: ubuntu-latest
