--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         git config --global user.name "ci"
         git config pull.rebase false
         git checkout -b main  # 创建或切换到目标分支
-        git pull origin main
+        git pull --allow-unrelated-histories origin main
         git add ./dist
         git commit -m "build: auto build"
         git push origin main
