--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         git config pull.rebase false
         git checkout -b main  # 创建或切换到目标分支
         git pull --allow-unrelated-histories origin main
+        git merge main
         git add ./dist
         git commit -m "build: auto build"
         git push origin main
