--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@testing-library/react": "^14.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -31,17 +32,20 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
+    "@testing-library/jest-dom": "^6.1.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^1.0.4",
     "axios": "^1.6.2",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "husky": "^8.0.3",
+    "jsdom": "^23.0.1",
     "less": "^4.2.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
