--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,10 @@ jobs:
       run: yarn build
     - name: Push to Branch
       run: |
-        git config --global user.email "1845519693@qq.com"
-        git config --global user.name "ci"
-        git add -f ./dist
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git checkout -b build
+        git add -f dist
         git commit -m "build: auto build"
         git push -f origin build
   deploy:
