--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "vitest",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@testing-library/react": "^14.1.2",
