--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@testing-library/jest-dom": "^6.1.5",
+    "@tsparticles/engine": "^3.0.3",
+    "@tsparticles/preset-confetti": "^3.0.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.0.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
