--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "html2canvas": "^1.4.1",
     "husky": "^8.0.3",
     "jsdom": "^23.0.1",
     "less": "^4.2.0",
